<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.discount.DiscountFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:descendantFocusability="beforeDescendants"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_discount"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="normal"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.123"
                app:layout_constraintWidth_percent="0.7" />

            <EditText
                android:id="@+id/discount_summ"
                android:drawableRight="@drawable/ic_discount"
                app:layout_constraintTop_toBottomOf="@id/text"
                app:layout_constraintLeft_toLeftOf="@id/text"
                app:layout_constraintWidth_percent="0.94"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintVertical_bias="0.2"
                android:textStyle="normal"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/per_discount"
                android:inputType="number"
                android:padding="@dimen/_5sdp"
                android:layout_width="0dp"
                android:background="@drawable/edite_text"
                android:layout_height="@dimen/_40sdp"/>
            <TextView
                android:textAllCaps="false"
                android:id="@+id/ok_btn"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/save"
                app:layout_constraintTop_toBottomOf="@id/discount_summ"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                android:textStyle="normal"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/black"
                android:paddingTop="@dimen/_3sdp"
                android:gravity="center"
                android:paddingBottom="@dimen/_3sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"/>
            <TextView
                android:textAllCaps="false"
                android:id="@+id/update_btn"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="O'zgartirish"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/discount_summ"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                android:textStyle="normal"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/black"
                android:paddingTop="@dimen/_3sdp"
                android:gravity="center"
                android:paddingBottom="@dimen/_3sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_discount"
                android:isScrollContainer="false"
                tools:listitem="@layout/item_discount"
                android:layout_marginTop="@dimen/_5sdp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                app:layout_constraintTop_toBottomOf="@id/ok_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>