<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/consHome"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/no_internet"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#FF0000"
        android:visibility="gone"
        android:padding="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/no_internet_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.95"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/no_internet2"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/blue_1"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toBottomOf="@id/no_internet"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/allPrice_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_all_pay"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/search"
        app:layout_constraintWidth_percent="0.7"
        android:paddingLeft="@dimen/_8sdp"
        app:layout_constraintHorizontal_bias="0.03"
        android:background="@drawable/searchview"
        android:drawableLeft="@drawable/ic_search_2"
        android:hint="@string/search_hint"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:maxLines="1"
        android:textSize="@dimen/_12sdp"
        android:inputType="text"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        app:layout_constraintVertical_bias="0.01"
        android:layout_height="@dimen/_35sdp"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/addButton"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search"
        android:clickable="true"
        android:focusable="true"
        app:cardMaxElevation="0dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:layout_marginRight="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consAdd"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/icon_add"
                android:padding="@dimen/_7sdp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/qr_btn"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/search"
        app:layout_constraintRight_toLeftOf="@id/addButton"
        app:layout_constraintTop_toTopOf="@+id/search"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:layout_marginRight="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consQr"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageQr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_qr_code"
                android:padding="@dimen/_7sdp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainRv"
        tools:listitem="@layout/row_item_basket"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <ImageView
        android:id="@+id/no_internet_icon"
        app:layout_constraintTop_toBottomOf="@id/price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        app:layout_constraintVertical_bias="0.4"
        android:src="@drawable/ic_vector_5"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_250sdp"/> 
    <include
        android:id="@+id/include"
        android:visibility="gone"
        layout="@layout/loading"/>
</androidx.constraintlayout.widget.ConstraintLayout>